--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonpath-plus": "latest",
     "path": "latest",
     "readline": "latest"
+    "nexe": "latest"
   },
   "keywords": [
     "Ansible",
