DEBIAN_FRONTEND=noninteractive added for travis timeout

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 before_install:
-- sudo apt-get install npm -y
+- DEBIAN_FRONTEND=noninteractive sudo apt-get install npm -y
+
 install:
 - npm install
 language: node_js
