--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ cache:
   directories:
     - ansible
     - tmp
+    - ./tmp
+    - /tmp
     - node_modules 
 node_js:
   - "6"
@@ -16,7 +18,7 @@ dist: trusty
 env:
   - CXX=g++-4.8
   - DEBIAN_FRONTEND=noninteractive
-adons:
+addons:
   apt:
     sources:
       -ubuntu-toolchain-r-test
