--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ cache:
     - tmp
     - ./tmp
     - /tmp
+    - ~/build/june07/ansible-dyna
+amic-inventory/tmp
+    - $HOME/build/june07/ansible-dyna
+amic-inventory/tmp
     - node_modules 
 node_js:
   - "6"
