--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
   "bugs": {
     "url": "https://github.com/june07/ansible-dynamic-inventory/issues"
   },
-  "homepage": "https://github.com/june07/ansible-dynamic-inventory#readme"
+  "homepage": "https://github.com/june07/ansible-dynamic-inventory#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.1.0"
+  }
 }
